--- a/blog-backend/src/main/resources/application.properties
+++ b/blog-backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
 # Database Connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=dino2711
+spring.datasource.password=changeinprod!
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
